update ratelimit with redis
